Exercicis/practicaFinal/exercici1/servicecontent.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-svc
spec:
  selector:
    app.kubernetes.io/name: contentserver
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
