Exercicis/practicaFinal/exercici1/servicedb.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app.kubernetes.io/name: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
