Exercicis/practicaFinal/exercici1/serviceweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  selector:
    app.kubernetes.io/name: webserverApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
