Exercicis/practicaFinal/exercici1/ingressweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcont-ing
  namespace: frontend
spec:
  rules:
  - host: kuber.local
    http:
      paths:
      - backend:
          service:
            name: webserver-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: content-svc
            port:
              number: 80
        path: /static
        pathType: Prefix
